# minesweeper

./: CMakeLists.txt  cards.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tile.cpp  tile.h  tileButton.h
minesweeper_assets/: credit.txt
